# pipelines_weather_forecast

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_venv.txt  script.py
.github/workflows/: cd.yaml  cd_staging.yaml  code-tree-analysis.yaml  lint.yaml
.github/workflows/scripts/: code_tree_analysis.py  register_flows.py
pipelines/: constants.py  flows.py  tasks.py  utils.py  utils_api.py
pipelines/exemplo/nome_do_objetivo/: flows.py
pipelines/precipitation_model/: __init__.py
pipelines/precipitation_model/impa/: .update-real_time.sh.swp  README.md  flows.py  requirements.txt  schedules.py  tasks.py  utils.py
pipelines/precipitation_model/impa/data/dataframe_grids/: rio_de_janeiro-res=2km-256x256.npy  rio_de_janeiro-res=4km-256x256.npy
pipelines/precipitation_model/impa/data/processed/elevations_data/: elevation_rio_de_janeiro-res=2km-256x256.npy  elevation_rio_de_janeiro-res=4km-256x256.npy
pipelines/precipitation_model/impa/eval/viz/plot-real_time-MDN/: index.html  real_time.html
pipelines/precipitation_model/impa/eval/viz/plot-real_time-SAT/: index.html  script.js  styles.css
pipelines/precipitation_model/impa/models/EVONET/: 1--best-epoch=3.ckpt  params.json
pipelines/precipitation_model/impa/models/Mamba/: 7--best-epoch=18.ckpt  params.json
pipelines/precipitation_model/impa/models/MetNet3/: 3--best-epoch=3.ckpt  params.json
pipelines/precipitation_model/impa/models/NowcastNet/: 0--best-epoch=4-v1.ckpt  params.json
pipelines/precipitation_model/impa/models/UNET/: 3--best-epoch=4.ckpt  params.json
pipelines/precipitation_model/impa/src/data/: HDFDataset2.py  HDFDatasetLocations.py  HDFDatasetMerged.py  HDFDatasetMultiple.py  PredHDFDataset2.py  PredHDFDatasetLocations.py  download_MDN.sh  download_satellite.sh
pipelines/precipitation_model/impa/src/data/process/: RadarData.py  SatelliteData.py  build_dataframe.py  build_dataframe_from_radar.py  build_dataframe_from_sat.py  despeckle_radar_data.py  process_MDN.py  process_satellite.py
pipelines/precipitation_model/impa/src/eval/: predict_real_time.py  real_time_config.json  real_time_config_MDN.json  real_time_config_SAT.json  run_local.py  update-real_time.py  update-real_time_.py  update-real_time_MDN.py  update-real_time_SAT.py
pipelines/precipitation_model/impa/src/eval/metrics/: calc-metrics.py  metrics.py
pipelines/precipitation_model/impa/src/eval/viz/: plot-real_time.py  plot-real_time_one_img.py  plot_real_time.py
pipelines/precipitation_model/impa/src/models/: lightning_module.py  predict.py
pipelines/precipitation_model/impa/src/models/Evolution_Network/: evolution_network.py  lightning.py  model_parts.py  utils.py
pipelines/precipitation_model/impa/src/models/Metnet3/: lightning.py  metnet3_pytorch.py
pipelines/precipitation_model/impa/src/models/Metnet3/Max_Vit/: Max_Vit.py
pipelines/precipitation_model/impa/src/models/NowcastNet/: lightning.py
pipelines/precipitation_model/impa/src/models/UNET/: lightning.py  unet_parts.py
pipelines/precipitation_model/impa/src/models/context_LDM_concat_new/: attention.py  autoenc_v2.py  ddim.py  lightning_v2.py  model.py  openaimodel.py  predict.py  utils.py
pipelines/precipitation_model/impa/src/models/context_LDM_concat_new/autoencoder/: discriminator.py  distributions.py  loss.py  modules.py
pipelines/precipitation_model/impa/src/models/gan/: parts_gan.py
pipelines/precipitation_model/impa/src/models/gan/gan_unet/: model.py  unet_parts.py
pipelines/precipitation_model/impa/src/models/mamba/: csm_triton.py  lightning.py  lightning_radar.py  lightning_sat.py  predict.py  vmamba.py  vmamba_radar.py  vmamba_sat.py
pipelines/precipitation_model/impa/src/models/nowcasting/layers/evolution/: module.py
pipelines/precipitation_model/impa/src/models/nowcasting/layers/generation/: generative_network.py  module.py
pipelines/precipitation_model/impa/src/models/pysteps_LK/: predict.py
pipelines/precipitation_model/impa/src/utils/: data_utils.py  dataframe_utils.py  eval_utils.py  general_utils.py  hdf_utils.py  models_utils.py
pipelines/precipitation_model/rionowcast/: flows.py  schedules.py  tasks.py  utils.py
pipelines/precipitation_model/rionowcast/data/: grid_points.parquet
pipelines/precipitation_model/rionowcast/gypscie/integrator/: MLproject  conda.yaml  integrator.py
pipelines/precipitation_model/rionowcast/gypscie/integrator/utils/: date_time.py  logging.py  meteorological.py
pipelines/precipitation_model/rionowcast/gypscie/processors/: MLproject  conda.yaml  etl_alertario.py
pipelines/precipitation_model/rionowcast/gypscie/processors/utils/: date_time.py  filesystem.py  logging.py  meteorological.py
pipelines/precipitation_model/rionowcast/test_flow/: tasks.py  test_flow.ipynb  utils.py
pipelines/utils/: __init__.py  api.py  utils.py  utils_wf.py
pipelines/utils/gypscie/: tasks.py  utils.py
