[tool.poetry]
authors = ["acataos <acatao1999@gmail.com>"]
description = ""
name = "rio-rain-integration-test"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = {version = "^3.8.5", optional = true}
python = ">=3.9,<3.11"
# basedosdados = { git = "https://github.com/basedosdados/mais", rev = "7a91bc3ab9b6d846c2e809129b31994a1a81fc11", subdirectory = "python-package", extras = [
#     "upload",
# ] }
prefeitura-rio = { git = "https://github.com/prefeitura-rio/prefeitura-rio.git", rev = "62236b527b3528437b8d460f60c79ee39309b151", branch = "feat/reimplement-templates", extras = [
    "pipelines",
    "pipelines-templates",
] }
basedosdados = {version = "^2.0.0b15", extras = ["upload"]}
beartype = "^0.18.5"
boto3 = "^1.35.27"
croniter = {version = "^2.0.1", optional = true}
cx-oracle = {version = "^8.3.0", optional = true}
dask = {version = "^2023.11.0", optional = true}
earthengine-api = {version = "^0.1.379", optional = true}
einops = "^0.7.0"
fvcore = "^0.1.5.post20221221"
geojsplit = {version = "^0.1.2", optional = true}
geopandas = {version = "^0.14.1", optional = true}
geopy = {version = "^2.4.1", optional = true}
google-cloud-storage = {version = "^2.10.0", optional = true}
gspread = {version = "^5.12.4", optional = true}
h5py = "^3.7.0"
hvac = "0.11.2"
infisical = {version = "^1.4.2, <1.6", optional = true}
jinja2 = {version = "^3.1.2", optional = true}
joblib = "^1.2.0"
kaleido = "0.2.1"
matplotlib = "^3.5.2"
netcdf4 = "^1.7.1.post2"
numpy = {version = "^1.23.3", optional = true}
opencv-python-headless = "^4.10.0.84"
packaging = "^24.1"
pandas = {version = "^2.0.3", optional = true}
pendulum = {version = "^2.1.2", optional = true}
plotly = "^5.9.0"
prefect = {version = "1.4.1", optional = true}
psycopg2-binary = {version = "^2.9.9", optional = true}
pyarrow = "^17.0.0"
pymongo = {version = "^4.6.0", optional = true}
pymysql = {version = "^1.1.0", optional = true}
pyodbc = {version = "^5.0.1", optional = true}
pyproj = "^3.4.0"
pysteps = "^1.7.4"
pytorch-lightning = "^2.1.1"
pytz = {version = "^2023.3", optional = true}
redis-pal = {version = "^1.0.0", optional = true}
requests = {version = "^2.31.0", optional = true}
ruamel-yaml = {version = "^0.18.6", optional = true}
satpy = "^0.43.0"
scikit-learn = {version = "^1.1.2", optional = true}
sentry-sdk = {version = "^1.29.2", optional = true}
setuptools = "^74.1.2"
shapely = {version = "^2.0.2", optional = true}
termcolor = "^2.4.0"
timm = "^1.0.9"
torch = "2.0.0"
tqdm = "^4.64.0"
urllib3 = ">=1.26,<2"
xarray = "^2022.6.0"

[tool.poetry.extras]
all = [
  "aiohttp",
  "basedosdados",
  "croniter",
  "cx-oracle",
  "dask",
  "earthengine-api",
  "geojsplit",
  "gspread",
  "geopandas",
  "geopy",
  "google-cloud-storage",
  "infisical",
  "numpy",
  "pandas",
  "pendulum",
  "prefect",
  "pymongo",
  "pymysql",
  "pyodbc",
  "pytz",
  "redis-pal",
  "requests",
  "scikit-learn",
  "shapely",
  "sentry-sdk",
  "jinja2",
  "ruamel-yaml",
]
metrics = ["numpy", "scikit-learn"]
pipelines = [
  "basedosdados",
  "dask",
  "google-cloud-storage",
  "infisical",
  "jinja2",
  "pandas",
  "prefect",
  "sentry-sdk",
  "ruamel-yaml",
]
pipelines-templates = [
  "croniter",
  "cx-oracle",
  "earthengine-api",
  "geojsplit",
  "geopandas",
  "geopy",
  "gspread",
  "psycopg2-binary",
  "pymongo",
  "pymysql",
  "pyodbc",
  "redis-pal",
  "requests",
  "shapely",
  "jinja2",
]
sgrc = ["aiohttp", "pendulum", "pytz", "requests"]

actions = ["ruamel-yaml"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.12.0"
mako = "^1.2.4"
markdown = "^3.4.3"
pdoc3 = "^0.10.0"
pre-commit = "^2.18.1"
pytest-cov = "^3.0.0"
taskipy = "^1.12.0"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
networkx = "^3.1"
loguru = "^0.7.0"
typer = "^0.9.0"

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--cov=prefeitura_rio", "-r a", "-v"]
norecursedirs = [
  "dist",
  "build",
  "docs",
  ".tox",
  ".eggs",
  ".venv",
  ".mypy_cache",
  ".pytest_cache",
  ".git",
  "__pycache__",
  "scripts",
]
testpaths = ["tests"]

[tool.taskipy.tasks]
docs = "poetry run pdoc3 --html --html-dir docs prefeitura_rio"
lint = "poetry run pre-commit run --all-files"
test = "poetry run pytest"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
