[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dbt-bigquery = "^1.6.1"
google-cloud-storage = "^2.10.0"
prefect = "1.4.1"
prefeitura-rio = { git = "https://github.com/prefeitura-rio/prefeitura-rio.git", rev = "2f6a5b9cfae4e214e694346a87c3ffbbe0954a70", branch = "feat/reimplement-templates", extras = [
    "pipelines",
    "pipelines-templates",
] }
geopandas = "^0.14.1"
matplotlib = "^3.9.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
pendulum = "^3.0.0"
requests = "^2.31.0"
shapely = "^2.0.2"
h3 = "^3.7.6"
google-cloud-asset = "^3.24.1"
google-cloud-logging = "^3.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
taskipy = "^1.12.0"
isort = "^5.12.0"


[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
networkx = "^3.1"
loguru = "^0.7.0"
typer = "^0.9.0"

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black . && isort . && flake8 ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"