[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# dbt-bigquery = "^1.6.1"
# google-cloud-storage = "^2.10.0"
# prefect = "1.4.1"
# google-cloud-asset = "^3.24.1"
# google-cloud-logging = "^3.10.0"
awscli = "^1.34.18"
basedosdados = { version = "^2.0.0b22", extras = ["upload"] }
beartype = "^0.18.5"
boto3 = ">=1.35,<=1.36"
einops = "^0.7"
fvcore = "^0.1.5.post20221221"
h5py = "^3.7"
joblib = "^1.2"
kaleido = "0.2.1"
matplotlib = "^3.5.2"
netcdf4 = "^1.7.1.post2"
numpy = "<2"
opencv-python-headless = "^4.10.0.84"
# packaging = "^24.1"
plotly = "^5.9.0"
prefect = "1.4.1"
prefeitura-rio = { git = "https://github.com/prefeitura-rio/prefeitura-rio.git", rev = "2f6a5b9cfae4e214e694346a87c3ffbbe0954a70", branch = "feat/reimplement-templates", extras = [
  "pipelines",
  "pipelines-templates",
] }
pyarrow = "^17.0.0"
pyproj = "^3.4.0"
# pysteps = "^1.7.4"  # removes
pytorch-lightning = "^2.1.1"
satpy = "^0.43.0"
termcolor = "^2.4.0"
timm = "^1.0.9"
torch = ">=2.0.0,<2.0.1 || >2.0.1,<2.1.0 || >2.1.0"
tqdm = "^4.64.0"
xarray = "^2022.6.0"
geopandas = "^0.14.1"
pandas = "^2.1.4"
pendulum = "^3.0.0"
requests = "^2.31.0"
shapely = "^2.0.2"
h3 = "^3.7.6"
psutil = "^5.9.8"
pyspark = "^3.5.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
taskipy = "^1.12.0"
setuptools = "75.6.0"
wheel = "0.45.1"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
networkx = "^3.1"
loguru = "^0.7.0"
typer = "^0.9.0"

[tool.black]
line-length = 100
include = "\\.pyi?$"
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black . && isort . && flake8 ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
